2008-08-26  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* Repository: branch for STLport 5.2, r3618

2008-07-21  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/type_traits:  decay, conditional, ebable_if added.

2008-07-18  Francois Dumont  <dums@users.sourceforge.net>

	* configure.bat: Specifying the compiler is now mandatory and
	must be first.

2008-07-17  Francois Dumont  <dums@users.sourceforge.net>

	* stlport/stdlib.h, cstdlib: Fix errno workaround for gcc MinGW.
	Latest gcc version (4.3.0) includes stdlib.h in cstdlib using
	include_next so skipping workaround in STLport stdlib.h. So errno.h
	must also be included from cstdlib.

2008-07-17  Petr Ovtchenkov  <complement@users.sourceforge.net>

	src/details/fstream_unistd.cpp: fix bug #2001222, opening with
	ios_base::app should rewind write pointer to the end of the file;
	fix treatment of ios_base::ate (it should rewind pointer
	to the end of the file once) and ios_base::app (offset will be set
	to the end of the file prior to each write); references ---
	http://www.open-std.org/Jtc1/sc22/wg21/docs/papers/2008/n2691.pdf
	27.8.1.4; http://www.opengroup.org/onlinepubs/7990989775/xsh/fopen.html;
	http://www.opengroup.org/onlinepubs/7990989775/xsh/open.html

	test/unit/fstream_test.cpp: add sample with fopen as reference point.

2008-07-14  Francois Dumont  <dums@users.sourceforge.net>

	* build/Makefiles/gmake: Build system updated for gcc under Cygwin,
	MinGW. Under Cygwin, with or without -mno-cygwin option, STLport
	is now a full replacement for libstdc++, building an application
	with it do not require -lsupc++ anymore as it is completely
	integrated in STLport. Under MinGW it didn't work resulting in a
	crash when starting an application using STLport so -lsupc++ is
	necessary both when linking STLport _and_ when linking the
	application using it.

2008-07-10  Francois Dumont  <dums@users.sourceforge.net>

	* src/num_put_float.cpp: Use an union based technique to find out