@@ -20,17 +20,7 @@
 #   define _STLP_DONT_POP_HEADER_ID
 #endif
 
-#if !defined (_STLP_WCE_EVC3)
-#  if defined (_STLP_USE_NEW_C_HEADERS)
-#    if defined (_STLP_HAS_INCLUDE_NEXT)
-#      include_next <cassert>
-#    else
-#      include _STLP_NATIVE_CPP_C_HEADER(cassert)
-#    endif
-#  else
-#    include <assert.h>
-#  endif
-#endif
+#include <assert.h>
 
 #if (_STLP_OUTERMOST_HEADER_ID == 0x103 )
 #  if !defined (_STLP_DONT_POP_HEADER_ID)
