@@ -21,25 +21,15 @@
 #  include <stl/_prolog.h>
 #endif
 
-#ifndef _STLP_WCE
-#  if defined (_STLP_USE_NEW_C_HEADERS)
-#    if defined (_STLP_HAS_INCLUDE_NEXT)
-#      include_next <cerrno>
-#    else
-#      include _STLP_NATIVE_CPP_C_HEADER(cerrno)
-#    endif
-#  else
-#    include <errno.h>
-#  endif
-#endif
+#include <errno.h>
 
 #ifndef errno /* errno is not a macro */
 #  if defined (_STLP_IMPORT_VENDOR_CSTD)
-#      if !defined (__IBMCPP__) && !defined (__hpux) && !defined (__MWERKS__) && !defined (_STLP_WCE)
+#    if !defined (__IBMCPP__) && !defined (__hpux) && !defined (_STLP_WCE)
 _STLP_BEGIN_NAMESPACE
 using _STLP_VENDOR_CSTD::errno;
 _STLP_END_NAMESPACE
-#      endif
+#    endif
 #  endif
 #endif
 
